tests/expected_invalid_foreign_proves.diag.out
<input>:6:45: error: foreign functions may not declare `proves`
    public foreign fn make_receipt() -> Receipt proves Receipt
                                                ^^^^^^
